# LogSquirl-Serial

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  plugin.json  releases.json
.github/workflows/: ci-build.yml  ci-release.yml
docs/: DEVELOPER_GUIDE.md
include/: logsquirl_plugin_api.h
src/: newsessionwidget.cpp  newsessionwidget.h  plugin.cpp  plugin.h  portwidget.cpp  portwidget.h  serialprocess.cpp  serialprocess.h  sidebarwidget.cpp  sidebarwidget.h
tests/: CMakeLists.txt  parseportlist_test.cpp  plugininfo_test.cpp  serialprocess_test.cpp  tests_main.cpp
